:memo: updated base documentation
