# src/routes/index.ts
@@ -1,5 +1,6 @@
 //generated file, run 'yarn gen:routes' to update
 
 export default {
+	createUser: async() => (await import("./create-user")).default,
 	usersGet: async() => (await import("./users-get")).default,
 };
